# exprimo

./: .chglog.yml  .convy.toml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  changelog.yml
.circleci/: config.yml
examples/: basic.rs  payload.rs
src/: lib.rs
tests/: basic.rs  payload.rs  primitives.rs  reliability.rs
