[package]
name = "exprimo"
version = "0.3.1"
edition = "2021"
license = "MIT"
authors = ["joshua.tracey08@gmail.com"]
description = "Exprimo is a JavaScript expression evaluator written in Rust."
repository = "https://github.com/josh-tracey/exprimo"
readme = "README.md"
keywords = ["expression", "eval", "js-expression", "js-eval", "javascript"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "~1"
rslint_parser = "=0.3.1"
scribe-rust = { version = "~0.2", optional = true }
serde_json = "~1"
serde_json_ctx = { version = "0.1.0", optional = true }
thiserror = "~1"

[features]
default = ["serde_json_ctx"]
serde_json_ctx = ["dep:serde_json_ctx"]
logging = ["scribe-rust"]
