[package]
name = "exprimo"
version = "0.6.0"
edition = "2021"
license = "MIT"
authors = ["joshua.tracey08@gmail.com"]
description = "Exprimo is a JavaScript expression evaluator written in Rust."
repository = "https://github.com/josh-tracey/exprimo"
readme = "README.md"
keywords = ["expression", "eval", "js-expression", "js-eval", "javascript"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "~1"
rslint_parser = "=0.3.1"
serde_json = "~1"
thiserror = "~1"
tracing = "0.1.41"
